feat:adding Portfolio.html file with base code

--- a/NewPortfolio.html
+++ b/NewPortfolio.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="Edu_and_Ref">
-               <h2 align="center">EDUCATION</h2>
+               <h2 align="center">EDUCATION.</h2>
                <hr width="80%" color="Gold"
                size="3" >
                <p>B.Tech</p>
